After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691687 - GstImageType documentation is misleading
GstImageType documentation is misleading
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal normal
: 1.0.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-14 00:25 UTC by Carlos Rafael Giani
Modified: 2013-01-14 11:13 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Carlos Rafael Giani 2013-01-14 00:25:58 UTC
According to http://gstreamer.freedesktop.org/data/doc/gstreamer/head/gst-plugins-base-libs/html/gst-plugins-base-libs-gsttag.html#GstTagImageType , the image type is stored as part of the caps structure. This is wrong though. Taken from tags.c:

  if (image_type != GST_TAG_IMAGE_TYPE_NONE) {
    GST_LOG ("Setting image type: %d", image_type);
    image_info = gst_structure_new ("GstTagImageInfo",
        "image-type", GST_TYPE_TAG_IMAGE_TYPE, image_type, NULL);
  }
  sample = gst_sample_new (image, caps, NULL, image_info);

so, the actual way to find out the image type is to use gst_sample_get_info().
Comment 1 Tim-Philipp Müller 2013-01-14 11:13:27 UTC
commit 776bae5b841b6c769aa8ce6ea33412928680fbc1
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Mon Jan 14 10:34:04 2013 +0000

    docs: fix 0.10-ism in GstTagImageType docs
    
    The image type is not in the info structure in the sample,
    not in the caps.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=691687