docs: fix 0.10-ism in GstTagImageType docs

The image type is not in the info structure in the sample,
not in the caps.

https://bugzilla.gnome.org/show_bug.cgi?id=691687